[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/actors/objects/goomba/goomba.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/objects/goomba/frames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/actors/objects/bullet_bill/sound.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/objects/goomba/poof.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/objects/goomba/poof.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/actors/objects/goomba/stomp.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/actors/objects/goomba/body.gd" type="Script" id=7]

[sub_resource type="RayShape2D" id=1]
length = 10.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 208.896, 69.015 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 32 )

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed = 1.0

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 2.92817, 1 ),
"update": 1,
"values": [ "default", "stomped", "stomped", "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.11, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 8.95777e-12, 1, 2.82843, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ), Vector2( 1, 0.1 ), Vector2( 0.1, 1.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:top_point")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 0, -9 ), Vector2( 0, 4 ), Vector2( 0, 9 ), Vector2( 0, -15 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.11, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 8.595e-07, 1, 2.92817, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, 7 ), Vector2( 0, -8 ) ]
}

[node name="Goomba" type="Node2D"]
z_index = -2
script = ExtResource( 1 )
top_point = Vector2( 0, -9 )

[node name="Goomba" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 85
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="Goomba"]
frames = ExtResource( 2 )

[node name="GroundCollisionL" type="CollisionShape2D" parent="Goomba"]
position = Vector2( -6.5, -1 )
shape = SubResource( 1 )

[node name="GroundCollisionR" type="CollisionShape2D" parent="Goomba"]
position = Vector2( 6.5, -1 )
shape = SubResource( 1 )

[node name="BoxCollision" type="CollisionShape2D" parent="Goomba"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="Goomba"]
visible = false
position = Vector2( 0, -7 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba/AttackArea"]
position = Vector2( 0, 8 )
shape = SubResource( 3 )

[node name="StompArea" type="Area2D" parent="Goomba"]
position = Vector2( 0, -7 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba/StompArea"]
position = Vector2( 0, -2 )
shape = SubResource( 4 )

[node name="PlayerDetector" type="Area2D" parent="Goomba"]
visible = false
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba/PlayerDetector"]
shape = SubResource( 5 )

[node name="PlatformDetector" type="Area2D" parent="Goomba"]
visible = false
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba/PlatformDetector"]
shape = SubResource( 6 )

[node name="WaterDetector" type="Area2D" parent="Goomba"]
visible = false
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goomba/WaterDetector"]
position = Vector2( 0, 8 )
shape = SubResource( 3 )

[node name="Stomp" type="AudioStreamPlayer2D" parent="Goomba"]
stream = ExtResource( 6 )
volume_db = -3.0
max_distance = 1000.0

[node name="Hit" type="AudioStreamPlayer2D" parent="Goomba"]
stream = ExtResource( 3 )
volume_db = -10.0
max_distance = 1000.0

[node name="Disappear" type="AudioStreamPlayer2D" parent="Goomba"]
stream = ExtResource( 5 )
volume_db = -3.0
max_distance = 1000.0

[node name="WallCheck" type="RayCast2D" parent="Goomba"]
position = Vector2( 0, -3 )
enabled = true
cast_to = Vector2( -32, 0 )
collision_mask = 81

[node name="WallVacantCheck" type="RayCast2D" parent="Goomba"]
position = Vector2( 0, -39 )
enabled = true
cast_to = Vector2( -64, 0 )
collision_mask = 81

[node name="PitCheck" type="RayCast2D" parent="Goomba"]
position = Vector2( -32, 3 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 81

[node name="Poof" type="Particles2D" parent="Goomba"]
material = SubResource( 7 )
emitting = false
amount = 1
lifetime = 0.35
one_shot = true
process_material = SubResource( 8 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Goomba"]
anims/Stomped = SubResource( 9 )

[node name="BottomPos" type="Node2D" parent="Goomba"]
position = Vector2( 0, 5 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -300, -300, 600, 600 )
pause_particles = false
process_parent = true
physics_process_parent = true
